--- a/templates/phpmyadmin/action_admin.html
+++ b/templates/phpmyadmin/action_admin.html
@@ -1,8 +1,8 @@
-123
-
 <div class="float-right">
 </div>
+<script type="text/javascript">
+//top.location.replace(self.document.URL.substring(0,self.document.URL.lastIndexOf("http://188.226.32.227/modules/phpmyadmin/phpmyadmin/index.php")))
+window.location = "/modules/phpmyadmin/phpmyadmin/index.php";
+</script>
 
- <iframe src="/modules/phpmyadmin/phpmyadmin/index.php" width="100%" height="1200" align="left">
-    Ваш браузер не поддерживает плавающие фреймы!
- </iframe>
+
